--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
-/common.exe
-/lastupdate.tmp
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.tmp
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+.vscode
+
+logs/
+# Dependency directories (remove the comment below to include it)
+# vendor/
+*.tar.gz
+*prof
+
+common
